--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,10 @@
 
 <body>
     <header>
-        <h1>Welcome to Amazing Cats!!</h1>
+        <div id="amazing-cats">
+            <h1 >AMAZING CATS</h1>
+        </div>
+        
         <nav>
             {{#if logged_in}}
             <a href="/dashboard">Home</a>
