--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header style="{{#unless logged_in}}display: none;{{/unless}}">
         <div id="amazing-cats">
             <h1 >AMAZING CATS</h1>
         </div>
