--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,14 @@
-<div id="bg-image">
-
-  <div id= "login-area">
-    <h2>Login</h2>
-
+<div class="bg-image">
+  <div id="login-area">
     <form class="form login-form">
+      <h2>AMAZING CATS</h2>
       <div class="form-group">
-        <label for="username-login">Username:</label>
-        <input class="form-input" type="text" id="username-login" />
+        <input class="form-input" type="text" id="username-login" placeholder="Username" />
       </div>
       <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="form-input" type="password" id="password-login" placeholder="Password" />
       </div>
-        <button class="btn" type="submit">Login</button>
+      <button class="btn" type="submit">Login</button>
     </form>
   </div>
 
