--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,33 @@
 <div class="bg-image">
   <div id="login-area">
-    <form class="form login-form">
-      <h2>AMAZING CATS</h2>
-      <div class="form-group">
-        <input class="form-input" type="text" id="username-login" placeholder="Username" />
-      </div>
-      <div class="form-group">
-        <input class="form-input" type="password" id="password-login" placeholder="Password" />
-      </div>
-      <button class="btn" type="submit">Login</button>
-    </form>
+    <div id="login-content">
+      <form class="form login-form">
+        <h2>AMAZING CATS</h2>
+        <div class="form-group">
+          <input
+            class="form-input"
+            type="text"
+            id="username-login"
+            placeholder="Username"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            class="form-input"
+            type="password"
+            id="password-login"
+            placeholder="Password"
+          />
+        </div>
+        <button class="btn" type="submit">Login</button>
+      </form>
+    </div>
+    <div class="demo">
+      <p>How To Access:</p>
+      <p>Username: AC-Loop</p>
+      <p>Password: password12345</p>
+    </div>
   </div>
-
 </div>
 
 <script src="./js/login.js"></script>
