--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,7 +23,7 @@
       </form>
     </div>
     <div class="demo">
-      <p>How To Access:</p>
+      <p>This is a demo enviroment. Login with:</p>
       <p>Username: AC-Loop</p>
       <p>Password: password12345</p>
     </div>
