--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         <nav>
             {{#if logged_in}}
             <a href="/dashboard">Home</a>
-            <a class="no-button" id="logout">Logout</a>
+            <a id="logout">Logout</a>
             {{/if}}
         </nav>
     </header>
