adjust dashboard page style

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
   <div id="shelter-area">
     {{#if logged_in}}
       {{#each shelters as |shelter|}}
-        <div class="card shelter-card" style="width: 18rem;">
+        <div class="card shelter-card">
           <div>
             <img src="/photos/logo.png" alt="AC Logo" id="shelter-logo" />
             <h5 class="card-title">{{shelter.username}}</h5>
