--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,13 +137,12 @@ nav > a {
 #dashboard {
   padding-top: 12rem;
   display: flex;
-  flex-wrap: wrap;
 }
 
 .shelter-card {
   border: 1px solid black;
   height: 100px;
-  width: 50px;
+  width: 18rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -164,9 +163,13 @@ h5 {
 
 #shelter-area {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   flex-flow: row wrap;
   width: 50%;
-  justify-content: center;
+  margin: 2rem;
+  box-sizing: border-box;
   font-family: "Lilita One", sans-serif;
 }
 
@@ -179,14 +182,16 @@ h5 {
   margin: 2rem;
   box-sizing: border-box;
   font-family: "Lilita One", sans-serif;
-  border: solid var(--purple);
 }
 
 .new-location-form {
   display: grid;
-  width: 100%;
+  width: 85%;
   max-width: 400px;
   justify-content: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 1rem;
 }
 
 .form-group {
@@ -313,7 +318,7 @@ h5 {
 
   #shelter-area,
   #sign-up-area {
-    width: 100%;
-    padding-top: 4rem;
+    width: 80%;
+    padding: 2rem 0;
   }
 }
