--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,14 +135,14 @@ nav > a {
 }
 
 #dashboard {
-  padding-top: 12rem;
+  padding-top: 10rem;
   display: flex;
 }
 
 .shelter-card {
   border: 1px solid black;
   height: 100px;
-  width: 18rem;
+  width: 14rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -165,7 +165,7 @@ h5 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-flow: row wrap;
   width: 50%;
   margin: 2rem;
@@ -318,7 +318,6 @@ h5 {
 
   #shelter-area,
   #sign-up-area {
-    width: 80%;
-    padding: 2rem 0;
+    width: 80%;   
   }
 }
