--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,9 @@
     <main>
         {{{body}}}
     </main>
+
+    <footer style="{{#unless logged_in}}display: none;{{/unless}}"></footer>
+
     <div>
         {{#if logged_in}}
         <script src="/js/logout.js"></script>
