--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ nav > a {
 }
 
 .shelter-card {
-  border: 1px solid black;
+  border: 1px solid var(--purple);
   height: 8rem;
   width: 10rem;
   display: flex;
@@ -189,7 +189,7 @@ h5 {
   width: 85%;
   max-width: 400px;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid var(--purple);
   border-radius: 10px;
   padding: 1rem;
 }
@@ -234,7 +234,7 @@ h5 {
 .cat-card {
   width: 12rem;
   height: 13rem;
-  border: 1px solid black;
+  border: 1px solid var(--purple);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -271,7 +271,7 @@ padding-top: 12rem;
   display: flex;
   flex-direction: column;
   line-height: 50px;
-  border: 1px solid black;
+  border: 1px solid var(--purple);
   border-radius: 10px;
   padding: 2rem;
 }
@@ -340,6 +340,7 @@ footer {
   #amazing-cats {
     padding-bottom: 1rem;
     text-align: center;
+    font-size: 2rem;
   }
 
   footer{
