--- a/public/css/style.css
+++ b/public/css/style.css
@@ -285,7 +285,7 @@ padding-top: 12rem;
   font-size: 18px;
   margin-top: 20px;
   width: 75%;
-  padding-top: 10rem;
+  padding-top: 8rem;
 }
 
 .cat-details > h3 {
@@ -298,7 +298,7 @@ padding-top: 12rem;
 }
 
 .cat-details > img {
-  width: 300px;
+  height: 300px;
   border-radius: 10px;
   margin-top: 20px;
 }
