--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,7 +264,7 @@ h5 {
 }
 
 .add-cat {
-padding-top: 12rem;
+  padding-top: 8rem;
 }
 
 .add-cat-form {
@@ -277,7 +277,7 @@ padding-top: 12rem;
 }
 
 #new-cat-submit {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 #cat-page {
@@ -343,7 +343,12 @@ footer {
     font-size: 2rem;
   }
 
-  footer{
+  .cat-details > img {
+    width: 300px;
+    height: auto;
+  }
+
+  footer {
     height: 2rem;
   }
 }
