--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,7 +191,7 @@ h5 {
   justify-content: center;
   border: 1px solid var(--purple);
   border-radius: 10px;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .form-group {
@@ -209,7 +209,7 @@ h5 {
 .new-location-form h2 {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 0.5rem;
   text-align: center;
 }
 
@@ -221,7 +221,7 @@ h5 {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-top: 10rem;
+  padding-top: 6.5rem;
 }
 
 .cat-card-container {
@@ -273,7 +273,7 @@ h5 {
   line-height: 50px;
   border: 1px solid var(--purple);
   border-radius: 10px;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 #new-cat-submit {
@@ -285,7 +285,7 @@ h5 {
   font-size: 18px;
   margin-top: 20px;
   width: 75%;
-  padding-top: 8rem;
+  padding-top: 6.5rem;
 }
 
 .cat-details > h3 {
